Tweak font sizes to prevent auto-zoom on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -91,3 +91,8 @@ h2 {
 #info {
   margin:12px;
 }
+
+/* Prevent auto zoom on iOS */
+input {
+  font-size: 16px;
+}
